xml registration, sendBraodcast and sendOrderedBroadcast

--- a/broadcastreceivers/src/main/res/values/strings.xml
+++ b/broadcastreceivers/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">BroadcastReceivers</string>
+    <string name="btnOkay">Okay</string>
+    <string name="customAction">com.codekul.receiver.custom</string>
 </resources>
